--- a/src/builds/desktop/components/main/faq/style.module.scss
+++ b/src/builds/desktop/components/main/faq/style.module.scss
@@ -6,6 +6,10 @@ h2, h3, p {
   font-family: "Inter", sans-serif;
 }
 
+p {
+  @include m.font(v.$grey-shade-60, 18px, 400, 27px);
+}
+
 .ResourceContainerLeft {
   > div {
     display: flex;
@@ -21,15 +25,42 @@ h2, h3, p {
       font-family: "Kumbh Sans", sans-serif;
       @include m.font(white, 40px, 600, 60px);
     }
-
-    p {
-      @include m.font(v.$grey-shade-60, 18px, 400, 27px);
-    }
   }
 }
 
 .ResourceContainerRight {
   > div {
+    display: flex;
+    gap: 20px;
+    border-radius: 12px;
+    border: 1px solid v.$dark-shade-15;
+    background-color: v.$dark-shade-10;
+    padding: 34px;
 
+    h3 {
+      @include m.font(white, 20px, 500, 24.2px);
+    }
+
+    .DescBlock {
+      hr {
+        border: 1px solid v.$dark-shade-15;
+        margin: 24px 0;
+      }
+
+      max-height: 0;
+      opacity: 0;
+      overflow: hidden;
+    }
+
+    > div {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+    }
+
+    svg {
+      font-size: 24px;
+      color: v.$yellow-shade-55;
+    }
   }
 }
