--- a/src/builds/desktop/components/main/blogs/style.module.scss
+++ b/src/builds/desktop/components/main/blogs/style.module.scss
@@ -31,6 +31,7 @@
     display: flex;
     justify-content: center;
     padding: 80px 162px;
+    transition: .3s all ease-in-out;
 
     > div {
       display: flex;
