--- a/src/builds/desktop/components/main/information/style.module.scss
+++ b/src/builds/desktop/components/main/information/style.module.scss
@@ -14,20 +14,44 @@ h1, h2, h3, h4, p {
   background-color: v.$dark-shade-08;
 
   > :first-child {
+    position: relative;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-content: end;
     border-bottom: 1px solid v.$dark-shade-15;
-    box-shadow: 0 -70px 150px 70px rgba(20, 20, 20, 1) inset;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
     height: 598px;
     padding: 50px 0;
+    overflow: hidden;
+
+    > div {
+      position: absolute!important;
+      top: 0;
+      z-index: 0;
+
+      &, img, &:after {
+        width: 100%;
+        height: 100%;
+      }
+
+      img {
+        position: absolute;
+        object-fit: cover;
+      }
+
+      &:after {
+        position: absolute;
+        content: '';
+        background: linear-gradient(180deg, rgba(20, 20, 20, 0) 0%, rgba(20, 20, 20, 0.880208) 75.52%, #141414 100%);
+      }
+    }
 
     h1 {
+      z-index: 1;
       @include m.font(white, 64px, 500, 96px);
     }
   }
@@ -132,7 +156,7 @@ h1, h2, h3, h4, p {
       left: 0;
       height: 120px;
       width: calc(100% - 2px);
-      background: linear-gradient(180deg, rgba(20, 20, 20, 0) 0%, rgba(20, 20, 20, 1) 80%);
+      background: linear-gradient(180deg, rgba(20, 20, 20, 0) 0%, rgba(20, 20, 20, 1) 60%);
     }
 
     > div:not(.ButtonBlock) {
