--- a/src/builds/desktop/components/main/heroSection/style.module.scss
+++ b/src/builds/desktop/components/main/heroSection/style.module.scss
@@ -107,9 +107,9 @@ h2, h3, p {
         > img {
           position: absolute;
           top: -7%;
-          left: -9%;
+          left: -7%;
           transform: rotate(35.39deg);
-          width: 65%;
+          width: 800px;
           mask-image: linear-gradient(to bottom, transparent, v.$dark-shade-08 50%, transparent);
         }
 
