--- a/src/builds/desktop/components/main/generalComponents/developer/style.module.css
+++ b/src/builds/desktop/components/main/generalComponents/developer/style.module.css
@@ -11,9 +11,13 @@
   padding: 10px;
   width: 230px;
 }
-.DeveloperContainer .DeveloperBlock img {
+.DeveloperContainer .DeveloperBlock > div {
   position: relative;
-  width: 60px;
+  height: 60px !important;
+}
+.DeveloperContainer .DeveloperBlock canvas, .DeveloperContainer .DeveloperBlock img {
+  width: 60px !important;
+  height: 60px !important;
   border: 2px solid #666666;
   border-radius: 100px;
 }
@@ -36,8 +40,12 @@
   padding: 10px;
   width: 194px;
 }
-.DeveloperContainer .DeveloperTopicBlock img {
-  width: 50px;
+.DeveloperContainer .DeveloperTopicBlock > div {
+  height: 50px !important;
+}
+.DeveloperContainer .DeveloperTopicBlock canvas, .DeveloperContainer .DeveloperTopicBlock img {
+  width: 50px !important;
+  height: 50px !important;
 }
 
 /*# sourceMappingURL=style.module.css.map */
