--- a/src/builds/desktop/components/main/generalComponents/developer/style.module.scss
+++ b/src/builds/desktop/components/main/generalComponents/developer/style.module.scss
@@ -13,9 +13,14 @@
     padding: 10px;
     width: 230px;
 
-    img {
+    > div {
       position: relative;
-      width: 60px;
+      height: 60px!important;
+    }
+
+    canvas, img {
+      width: 60px!important;
+      height: 60px!important;
       border: 2px solid v.$dark-shade-40;
       border-radius: 100px;
     }
@@ -44,8 +49,13 @@
     padding: 10px;
     width: 194px;
 
-    img {
-      width: 50px;
+    > div {
+      height: 50px!important;
+    }
+
+    canvas, img {
+      width: 50px!important;
+      height: 50px!important;
     }
   }
 }
