--- a/src/builds/desktop/components/main/resources/style.module.css
+++ b/src/builds/desktop/components/main/resources/style.module.css
@@ -47,6 +47,12 @@ h2, h3, p {
   line-height: 30px;
 }
 
+.ResourceContainerRight canvas, .ResourceContainerRight img {
+  max-height: 332px;
+  border-radius: 12px;
+  width: 100%;
+  object-fit: cover;
+}
 .ResourceContainerRight .ResourceTitleBlock {
   display: flex;
   align-items: center;
