--- a/src/builds/desktop/components/main/resources/style.module.scss
+++ b/src/builds/desktop/components/main/resources/style.module.scss
@@ -46,6 +46,13 @@ h2, h3, p {
 }
 
 .ResourceContainerRight {
+  canvas, img {
+    max-height: 332px;
+    border-radius: 12px;
+    width: 100%;
+    object-fit: cover;
+  }
+
   .ResourceTitleBlock {
     display: flex;
     align-items: center;
