--- a/src/builds/desktop/components/main/contactForm/style.module.scss
+++ b/src/builds/desktop/components/main/contactForm/style.module.scss
@@ -38,6 +38,7 @@ h2, h3, p {
     }
 
     .InputBlock {
+      position: relative;
       display: flex;
       flex-wrap: wrap;
       gap: 16px;
@@ -77,6 +78,12 @@ h2, h3, p {
       }
     }
 
+    small {
+      position: absolute;
+      bottom: -28px;
+      color: #ca0000;
+    }
+
     .WideBlock {
       > div, & {
         width: 100%;
@@ -90,6 +97,7 @@ h2, h3, p {
         align-items: center;
 
         span {
+          position: relative;
           display: flex;
           gap: 10px;
           align-items: center;
