--- a/src/builds/desktop/components/header/style.module.css
+++ b/src/builds/desktop/components/header/style.module.css
@@ -91,4 +91,35 @@ a {
   color: white;
 }
 
+.InputBlock {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  width: 50%;
+}
+.InputBlock label {
+  color: white;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 27px;
+}
+.InputBlock input, .InputBlock textarea {
+  padding: 20px;
+  border-radius: 8px;
+  border: 1px solid #262626;
+  background-color: #1A1A1A;
+  width: 100%;
+  height: auto;
+  transition: 0.2s all ease-in-out;
+  color: #666666;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+}
+.InputBlock input:focus, .InputBlock textarea:focus {
+  color: white;
+  border-color: #666666;
+}
+
 /*# sourceMappingURL=style.module.css.map */
