--- a/src/builds/desktop/components/header/style.module.scss
+++ b/src/builds/desktop/components/header/style.module.scss
@@ -1,4 +1,5 @@
 @use '../../../../utils/styles/base/_variables' as v;
+@use "../../../../utils/styles/base/_mixin.scss" as m;
 @import url("../../../../utils/styles/base/_normalize.scss");
 
 a {
@@ -106,4 +107,30 @@ a {
   }
 }
 
+.InputBlock {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  width: 50%;
 
+  label {
+    @include m.font(white, 18px, 500, 27px);
+  }
+
+  input, textarea {
+    padding: 20px;
+    border-radius: 8px;
+    border: 1px solid v.$dark-shade-15;
+    background-color: v.$dark-shade-10;
+    width: 100%;
+    height: auto;
+    transition: .2s all ease-in-out;
+    @include m.font(v.$dark-shade-40, 18px, 400, 27px);
+
+    &:focus {
+      color: white;
+      border-color: v.$dark-shade-40;
+    }
+  }
+}
