--- a/src/builds/desktop/components/main/generalComponents/popup/popupRegister/style.module.css
+++ b/src/builds/desktop/components/main/generalComponents/popup/popupRegister/style.module.css
@@ -5,19 +5,19 @@
   justify-content: center;
   gap: 35px;
 }
-.FormContainer > :first-child {
+.FormContainer .FileBlock {
   position: relative;
 }
-.FormContainer > :first-child input {
+.FormContainer .FileBlock input {
   display: none;
 }
-.FormContainer > :first-child label {
+.FormContainer .FileBlock label {
   display: block;
   margin: 0 auto;
   width: 90px;
   height: 90px;
 }
-.FormContainer > :first-child label img {
+.FormContainer .FileBlock label img {
   width: inherit;
   height: inherit;
   border-radius: 50%;
@@ -30,9 +30,11 @@
 }
 .FormContainer > :last-child {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
 }
-.FormContainer button {
+.FormContainer > :last-child button {
   background-color: #FFF5CC;
   padding: 15px 20px;
   border-radius: 8px;
@@ -40,6 +42,13 @@
   font-size: 18px;
   font-weight: 500;
   line-height: 24px;
+}
+.FormContainer > :last-child p {
+  transition: 0.2s color ease-in-out;
+  cursor: pointer;
+}
+.FormContainer > :last-child p:hover {
+  color: white;
 }
 
 /*# sourceMappingURL=style.module.css.map */
