--- a/src/builds/desktop/components/main/generalComponents/popup/popupRegister/style.module.scss
+++ b/src/builds/desktop/components/main/generalComponents/popup/popupRegister/style.module.scss
@@ -8,7 +8,7 @@
   justify-content: center;
   gap: 35px;
 
-  > :first-child {
+  .FileBlock {
     position: relative;
 
     input {
@@ -38,13 +38,24 @@
 
   > :last-child {
     display: flex;
-    justify-content: center;
-  }
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
 
-  button {
-    background-color: v.$yellow-shade-90;
-    padding: 15px 20px;
-    border-radius: 8px;
-    @include m.font(v.$dark-shade-08, 18px, 500, 24px);
+    button {
+      background-color: v.$yellow-shade-90;
+      padding: 15px 20px;
+      border-radius: 8px;
+      @include m.font(v.$dark-shade-08, 18px, 500, 24px);
+    }
+
+    p {
+      transition: .2s color ease-in-out;
+      cursor: pointer;
+
+      &:hover {
+        color: white;
+      }
+    }
   }
 }
