--- a/src/builds/desktop/components/main/generalComponents/popup/popupRegister/style.module.css
+++ b/src/builds/desktop/components/main/generalComponents/popup/popupRegister/style.module.css
@@ -29,6 +29,7 @@
   width: 100%;
 }
 .FormContainer > :last-child {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
