--- a/src/builds/desktop/components/header/style.module.css
+++ b/src/builds/desktop/components/header/style.module.css
@@ -49,7 +49,7 @@ a {
 .Header .Navbar span > * {
   transition: 0.2s background-color ease-in-out;
 }
-.Header .Navbar span > :first-child {
+.Header .Navbar span .ProfileButton {
   display: flex;
   align-items: center;
   color: white;
@@ -58,8 +58,17 @@ a {
   border: 1px solid #262626;
   padding: 8px;
 }
-.Header .Navbar span > :first-child:hover {
+.Header .Navbar span .ProfileButton:hover {
   background-color: #262626;
+}
+.Header .Navbar span .ProfileButtonActive {
+  height: 46px;
+}
+.Header .Navbar span .ProfileButtonActive img {
+  border: 1px solid #262626;
+  border-radius: 50%;
+  height: 46px;
+  object-fit: cover;
 }
 .Header .Navbar span > :last-child {
   font-size: 18px;
@@ -89,37 +98,6 @@ a {
   background-color: #141414;
   border: 1px solid #333333;
   color: white;
-}
-
-.InputBlock {
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 16px;
-  width: 50%;
-}
-.InputBlock label {
-  color: white;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 27px;
-}
-.InputBlock input, .InputBlock textarea {
-  padding: 20px;
-  border-radius: 8px;
-  border: 1px solid #262626;
-  background-color: #1A1A1A;
-  width: 100%;
-  height: auto;
-  transition: 0.2s all ease-in-out;
-  color: #666666;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 27px;
-}
-.InputBlock input:focus, .InputBlock textarea:focus {
-  color: white;
-  border-color: #666666;
 }
 
 /*# sourceMappingURL=style.module.css.map */
